fix: background animation clipping

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   height: 8px;
   width: 8px;
   background-color: #32323a83;
-  margin-left: calc((100% - 30px) / 11);
+  margin-left: calc((100% - 90px) / 13);
   border-radius: 50%;
 }
 .bg-animation-effect div:nth-child(even) {
